fixed configuration and scenario

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,66 +2,167 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "fb4ee2f3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1st Example: Integer hyperparameters and float hyperparameters\n",
     "from ConfigSpace import ConfigurationSpace\n",
-    "from ConfigSpace.hyperparameters import CategoricalHyperparameter, UniformFloatHyperparameter, UniformIntegerHyperparameter\n",
-    "from ConfigSpace.conditions import InCondition\n",
-    "from ConfigSpace.forbidden import ForbiddenEqualsClause\n",
     "\n",
-    "def get_configspace():\n",
-    "    learning_rate = CategoricalHyperparameter(\"learning_rate\", choices=[\"adaptive\", \"constant\"])\n",
-    "    alpha = UniformFloatHyperparameter(\"alpha\", lower=1e-7, upper=1e-1, log=True)\n",
-    "    max_iter = UniformIntegerHyperparameter(\"max_iter\", lower=100, upper=1000)\n",
-    "    eta0 = UniformFloatHyperparameter(\"eta0\", lower=1e-4, upper=1.0)\n",
-    "    early_stopping = CategoricalHyperparameter(\"early_stopping\", choices=[True, False], default_value=True)\n",
-    "\n",
-    "    config_space = ConfigurationSpace()\n",
-    "    config_space.add_hyperparameters([learning_rate, alpha, max_iter, eta0, early_stopping])\n",
-    "\n",
-    "    eta0_condition = InCondition(eta0, learning_rate, values=[\"constant\"])\n",
-    "    config_space.add_condition(eta0_condition)\n",
-    "\n",
-    "    forbidden_clause = ForbiddenEqualsClause(eta0, None, learning_rate)\n",
-    "    config_space.add_forbidden_clause(forbidden_clause)\n",
-    "\n",
-    "    return config_space\n"
+    "cs = ConfigurationSpace(\n",
+    "    space={\n",
+    "        \"C\": (-1.0, 1.0),  # Note the decimal to make it a float\n",
+    "        \"max_iter\": (10, 100),\n",
+    "    },\n",
+    "    seed=1234,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d92ccec2",
+   "execution_count": null,
+   "id": "a9166af1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/var/folders/27/qmbdy4fs531c8887h6nfgych0000gn/T/ipykernel_77942/4245066465.py:14: DeprecationWarning: Please use `space.add(hyperparameters)`\n",
-      "  config_space.add_hyperparameters([learning_rate, alpha, max_iter, eta0, early_stopping])\n",
-      "/var/folders/27/qmbdy4fs531c8887h6nfgych0000gn/T/ipykernel_77942/4245066465.py:17: DeprecationWarning: Please use `space.add(condition)`\n",
-      "  config_space.add_condition(eta0_condition)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "ForbiddenEqualsClause.__init__() takes 3 positional arguments but 4 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[43mget_configspace\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[7], line 19\u001b[0m, in \u001b[0;36mget_configspace\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m eta0_condition \u001b[38;5;241m=\u001b[39m InCondition(eta0, learning_rate, values\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconstant\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     17\u001b[0m config_space\u001b[38;5;241m.\u001b[39madd_condition(eta0_condition)\n\u001b[0;32m---> 19\u001b[0m forbidden_clause \u001b[38;5;241m=\u001b[39m \u001b[43mForbiddenEqualsClause\u001b[49m\u001b[43m(\u001b[49m\u001b[43meta0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m config_space\u001b[38;5;241m.\u001b[39madd_forbidden_clause(forbidden_clause)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m config_space\n",
-      "\u001b[0;31mTypeError\u001b[0m: ForbiddenEqualsClause.__init__() takes 3 positional arguments but 4 were given"
+      "Configuration space object:\n",
+      "  Hyperparameters:\n",
+      "    coef0, Type: UniformFloat, Range: [0.0, 1.0], Default: 0.0\n",
+      "    degree, Type: UniformInteger, Range: [2, 4], Default: 2\n",
+      "    gamma, Type: UniformFloat, Range: [1e-05, 100.0], Default: 1.0, on log-scale\n",
+      "    kernel_type, Type: Categorical, Choices: {linear, poly, rbf, sigmoid}, Default: linear\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "config = get_configspace()"
+    "# 2nd Example: Categorical hyperparameters and conditions#\n",
+    "from ConfigSpace import ConfigurationSpace, Categorical, Float, Integer\n",
+    "\n",
+    "kernel_type = Categorical('kernel_type', ['linear', 'poly', 'rbf', 'sigmoid'])\n",
+    "degree = Integer('degree', bounds=(2, 4), default=2)\n",
+    "coef0 = Float('coef0', bounds=(0, 1), default=0.0)\n",
+    "gamma = Float('gamma', bounds=(1e-5, 1e2), default=1, log=True)\n",
+    "\n",
+    "cs = ConfigurationSpace()\n",
+    "cs.add([kernel_type, degree, coef0, gamma])\n",
+    "\n",
+    "from ConfigSpace import EqualsCondition, InCondition, OrConjunction\n",
+    "\n",
+    "# read as: \"degree is active if kernel_type == 'poly'\"\n",
+    "cond_1 = EqualsCondition(degree, kernel_type, 'poly')\n",
+    "\n",
+    "# read as: \"coef0 is active if (kernel_type == 'poly' or kernel_type == 'sigmoid')\"\n",
+    "# You could also define this using an InCondition as shown below\n",
+    "cond_2 = OrConjunction(\n",
+    "    EqualsCondition(coef0, kernel_type, 'poly'),\n",
+    "    EqualsCondition(coef0, kernel_type, 'sigmoid')\n",
+    ")\n",
+    "\n",
+    "# read as: \"gamma is active if kernel_type in ['rbf', 'poly', 'sigmoid']\"\n",
+    "cond_3 = InCondition(gamma, kernel_type, ['rbf', 'poly','sigmoid'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85656a65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3rd Example: Forbidden clauses#\n",
+    "from ConfigSpace import ConfigurationSpace, Categorical, Constant\n",
+    "\n",
+    "cs = ConfigurationSpace()\n",
+    "\n",
+    "penalty = Categorical(\"penalty\", [\"l1\", \"l2\"], default=\"l2\")\n",
+    "loss = Categorical(\"loss\", [\"hinge\", \"squared_hinge\"], default=\"squared_hinge\")\n",
+    "dual = Constant(\"dual\", \"False\")\n",
+    "cs.add([penalty, loss, dual])\n",
+    "\n",
+    "from ConfigSpace import ForbiddenEqualsClause, ForbiddenAndConjunction\n",
+    "\n",
+    "penalty_and_loss = ForbiddenAndConjunction(\n",
+    "    ForbiddenEqualsClause(penalty, \"l1\"),\n",
+    "    ForbiddenEqualsClause(loss, \"hinge\")\n",
+    ")\n",
+    "constant_penalty_and_loss = ForbiddenAndConjunction(\n",
+    "    ForbiddenEqualsClause(dual, \"False\"),\n",
+    "    ForbiddenEqualsClause(penalty, \"l2\"),\n",
+    "    ForbiddenEqualsClause(loss, \"hinge\")\n",
+    ")\n",
+    "penalty_and_dual = ForbiddenAndConjunction(\n",
+    "    ForbiddenEqualsClause(dual, \"False\"),\n",
+    "    ForbiddenEqualsClause(penalty, \"l1\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "492b9dec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4th Example Serialization#\n",
+    "from pathlib import Path\n",
+    "from ConfigSpace import ConfigurationSpace\n",
+    "\n",
+    "path = Path(\"configspace.yaml\")\n",
+    "cs = ConfigurationSpace(\n",
+    "    space={\n",
+    "        \"C\": (-1.0, 1.0),  # Note the decimal to make it a float\n",
+    "        \"max_iter\": (10, 100),\n",
+    "    },\n",
+    "    seed=1234,\n",
+    ")\n",
+    "cs.to_yaml(path)\n",
+    "loaded_cs = ConfigurationSpace.from_yaml(path)\n",
+    "\n",
+    "with path.open() as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae3efb19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5th Example: Placing priors on the hyperparameters#\n",
+    "import numpy as np\n",
+    "from ConfigSpace import ConfigurationSpace, Float, Categorical, Beta, Normal\n",
+    "\n",
+    "cs = ConfigurationSpace(\n",
+    "    space={\n",
+    "        \"lr\": Float(\n",
+    "            'lr',\n",
+    "            bounds=(1e-5, 1e-1),\n",
+    "            default=1e-3,\n",
+    "            log=True,\n",
+    "            distribution=Normal(1e-3, 1e-1)\n",
+    "        ),\n",
+    "        \"dropout\": Float(\n",
+    "            'dropout',\n",
+    "            bounds=(0, 0.99),\n",
+    "            default=0.25,\n",
+    "            distribution=Beta(alpha=2, beta=4)\n",
+    "        ),\n",
+    "        \"activation\": Categorical(\n",
+    "            'activation',\n",
+    "            items=['tanh', 'relu'],\n",
+    "            weights=[0.2, 0.8]\n",
+    "        ),\n",
+    "    },\n",
+    "    seed=1234,\n",
+    ")\n",
+    "print(cs)\n"
    ]
   }
  ],
