changed the pipeline

--- a/test.ipynb
+++ b/test.ipynb
@@ -164,6 +164,16 @@
     ")\n",
     "print(cs)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e49e48d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ConfigSpace import Configuration\n"
+   ]
   }
  ],
  "metadata": {
