change llmclient to only get the system prompt

--- a/test.ipynb
+++ b/test.ipynb
@@ -130,10 +130,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ae3efb19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Configuration space object:\n",
+      "  Hyperparameters:\n",
+      "    activation, Type: Categorical, Choices: {tanh, relu}, Default: relu, Probabilities: [0.2 0.8]\n",
+      "    dropout, Type: BetaFloat, Alpha: 2.0, Beta: 4.0, Range: [0.0, 0.99], Default: 0.25\n",
+      "    lr, Type: NormalFloat, Mu: 0.001, Sigma: 0.1, Range: [1e-05, 0.1], Default: 0.001, on log-scale\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 5th Example: Placing priors on the hyperparameters#\n",
     "import numpy as np\n",
@@ -173,6 +186,34 @@
    "outputs": [],
    "source": [
     "from ConfigSpace import Configuration\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "47cca8ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from smac import Scenario\n",
+    "\n",
+    "def generate_scenario(cs):\n",
+    "    scenario = Scenario({\n",
+    "        'run_obj': 'quality',\n",
+    "        'output_dir': './automl_results',\n",
+    "        'shared_model': False,\n",
+    "        'multi_objectives': ['validation_loss'],\n",
+    "        'overall_obj': 'validation_loss',\n",
+    "        'deterministic': False,\n",
+    "        'wallclock_limit': 3600.0,\n",
+    "        'abort_on_first_run_crash': True,\n",
+    "        'limit_resources': True,\n",
+    "        'memory_limit': 16000.0,\n",
+    "        'cutoff': 300.0\n",
+    "    })\n",
+    "    return scenario\n",
+    "\n",
+    "scenario = generate_scenario(cs)"
    ]
   }
  ],
