finished the generation pipeline

--- a/test.ipynb
+++ b/test.ipynb
@@ -215,6 +215,46 @@
     "\n",
     "scenario = generate_scenario(cs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ed8aa2af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.98525351, 0.781331  , 0.90316584, 0.42289328, 0.0836624 ],\n",
+       "       [0.09098289, 0.45530062, 0.8913916 , 0.55417661, 0.19638563],\n",
+       "       [0.34897899, 0.89023083, 0.46529547, 0.62919728, 0.78103712],\n",
+       "       [0.21140623, 0.78827005, 0.41219888, 0.18284856, 0.95699989],\n",
+       "       [0.4160139 , 0.39566742, 0.68413273, 0.9207471 , 0.81198847],\n",
+       "       [0.1554572 , 0.28036314, 0.04413612, 0.39658158, 0.05237825],\n",
+       "       [0.56122639, 0.55022277, 0.39825877, 0.58396533, 0.46107929],\n",
+       "       [0.69087577, 0.2232384 , 0.04952998, 0.64866486, 0.50059245],\n",
+       "       [0.69802054, 0.18925913, 0.25659784, 0.16636338, 0.98976883],\n",
+       "       [0.40259054, 0.33274224, 0.01593082, 0.50959103, 0.43491217]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from types import SimpleNamespace\n",
+    "X = np.random.rand(10, 5)\n",
+    "y = np.random.rand(10, 1)\n",
+    "\n",
+    "\n",
+    "mydict = dict(X=X, y=y)\n",
+    "\n",
+    "\n",
+    "mydict = SimpleNamespace(**mydict)\n",
+    "mydict.X"
+   ]
   }
  ],
  "metadata": {
