--- a/test.ipynb
+++ b/test.ipynb
@@ -255,6 +255,40 @@
     "mydict = SimpleNamespace(**mydict)\n",
     "mydict.X"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7a9889a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'keras'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m mnist\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.datasets import mnist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d7f90549",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load mnist dataset\n",
+    "mnist = fetch_openml('mnist_784', version=1)\n",
+    "X, y = mnist.data, mnist.target\n"
+   ]
   }
  ],
  "metadata": {
