--- a/test.ipynb
+++ b/test.ipynb
@@ -4625,6 +4625,16 @@
     "\n",
     "print(response)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2855609f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ConfigSpace import ConfigurationSpace, Categorical, Float, Integer\n"
+   ]
   }
  ],
  "metadata": {
