--- a/test.ipynb
+++ b/test.ipynb
@@ -7159,6 +7159,96 @@
     ")\n",
     "smac.optimize()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "152b8d40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/27/qmbdy4fs531c8887h6nfgych0000gn/T/ipykernel_33661/675742445.py:16: DeprecationWarning: Please use `space.add(hyperparameter)`\n",
+      "  cs.add_hyperparameter(kernel)\n",
+      "/var/folders/27/qmbdy4fs531c8887h6nfgych0000gn/T/ipykernel_33661/675742445.py:19: DeprecationWarning: Please use `space.add(hyperparameter)`\n",
+      "  cs.add_hyperparameter(C)\n",
+      "/var/folders/27/qmbdy4fs531c8887h6nfgych0000gn/T/ipykernel_33661/675742445.py:22: DeprecationWarning: Please use `space.add(hyperparameter)`\n",
+      "  cs.add_hyperparameter(gamma)\n",
+      "/var/folders/27/qmbdy4fs531c8887h6nfgych0000gn/T/ipykernel_33661/675742445.py:25: DeprecationWarning: Please use `space.add(hyperparameter)`\n",
+      "  cs.add_hyperparameter(degree)\n",
+      "/var/folders/27/qmbdy4fs531c8887h6nfgych0000gn/T/ipykernel_33661/675742445.py:29: DeprecationWarning: Please use `space.add(condition)`\n",
+      "  cs.add_condition(condition_gamma)\n",
+      "/var/folders/27/qmbdy4fs531c8887h6nfgych0000gn/T/ipykernel_33661/675742445.py:32: DeprecationWarning: Please use `space.add(condition)`\n",
+      "  cs.add_condition(condition_degree)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ConfigSpace import (\n",
+    "    ConfigurationSpace,\n",
+    "    UniformFloatHyperparameter,\n",
+    "    UniformIntegerHyperparameter,\n",
+    "    CategoricalHyperparameter,\n",
+    "    InCondition,\n",
+    "    AndConjunction,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def get_configspace() -> ConfigurationSpace:\n",
+    "    cs = ConfigurationSpace()\n",
+    "\n",
+    "    # Define hyperparameters for SVM\n",
+    "    kernel = CategoricalHyperparameter(\"svm_kernel\", [\"linear\", \"rbf\", \"poly\"], default_value=\"rbf\")\n",
+    "    cs.add_hyperparameter(kernel)\n",
+    "\n",
+    "    C = UniformFloatHyperparameter(\"svm_C\", lower=0.01, upper=10, default_value=1.0, log=True)\n",
+    "    cs.add_hyperparameter(C)\n",
+    "\n",
+    "    gamma = UniformFloatHyperparameter(\"svm_gamma\", lower=0.001, upper=1.0, default_value=0.1, log=True)\n",
+    "    cs.add_hyperparameter(gamma)\n",
+    "\n",
+    "    degree = UniformIntegerHyperparameter(\"svm_degree\", lower=2, upper=5, default_value=3)\n",
+    "    cs.add_hyperparameter(degree)\n",
+    "\n",
+    "    # Add conditions\n",
+    "    condition_gamma = InCondition(child=gamma, parent=kernel, values=[\"rbf\", \"poly\"])\n",
+    "    cs.add_condition(condition_gamma)\n",
+    "\n",
+    "    condition_degree = InCondition(child=degree, parent=kernel, values=[\"poly\"])\n",
+    "    cs.add_condition(condition_degree)\n",
+    "\n",
+    "    return cs\n",
+    "\n",
+    "\n",
+    "cs = get_configspace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2a711565",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Configuration(values={\n",
+       "  'svm_C': 1.0,\n",
+       "  'svm_kernel': 'rbf',\n",
+       "  'svm_gamma': 0.1,\n",
+       "})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs.get_default_configuration()"
+   ]
   }
  ],
  "metadata": {
